Alterei a cor dos botoes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         .menu a {
             text-decoration: none;
-            background-color: #FE8B30;
+            background-color: #30a1fe;
             color: white;
             padding: 15px;
             text-align: center;
@@ -40,7 +40,7 @@
         }
 
         .menu a:hover {
-            background-color: #FE5B00;
+            background-color: #0050fe;
         }
     </style>
 </head>
